Frontend to Backend

--- a/Python/templates/index.html
+++ b/Python/templates/index.html
@@ -1,24 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
-
-    <title>Shop Page</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/album/">
-
-    <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link href="/css/album.css" rel="stylesheet">
-  </head>
-
-  <body>
+{% extends "layouts.html" %}
+{% block content %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -34,6 +15,7 @@
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="signin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
+      </div>
     </nav>
 
     <main role="main">
@@ -141,14 +123,4 @@
         <p>Raymond's shop</p>
       </div>
     </footer>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="/js/vendor/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/vendor/holder.min.js"></script>
-  </body>
-</html>
+{% endblock content %}
