--- a/Python/templates/layouts.html
+++ b/Python/templates/layouts.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="Raymond Huang" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
     <title>Log In</title>
@@ -21,8 +21,9 @@
         {% block content %} {% endblock %}
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery-slim.min.js"><\/script>')</script>
-        <script src="/js/vendor/popper.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-        <script src="/js/vendor/holder.min.js"></script>
+        <script src="static/js/vendor/popper.min.js"></script>
+        <script src="static/js/bootstrap.min.js"></script>
+        <script src="static/js/vendor/holder.min.js"></script>
+        <script src="static/jquery/jquery.min.js"></script>
   </body>
 </html>
