--- a/Python/templates/layouts.html
+++ b/Python/templates/layouts.html
@@ -7,7 +7,11 @@
     <meta name="Raymond Huang" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Log In</title>
+    {% if title %}
+        <title>{{ title }}</title>
+    {% else %}
+        <title> E-Store </title>
+    {% endif %}
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/sign-in/">
 
