--- a/Python/templates/index.html
+++ b/Python/templates/index.html
@@ -37,7 +37,9 @@
       <p class="lead text-muted">We sell stuff.</p>
           <p>
             <a href="shop.html" class="btn btn-primary my-2">Buy Something?</a>
-            <a href="signup.html" class="btn btn-secondary my-2">Sign Up</a>
+            {% if not loggedin %}
+                <a href="signup.html" class="btn btn-secondary my-2">Sign Up</a>
+            {% endif %}
           </p>
       </div>
     </main>
