Commit for teds merge

--- a/Python/templates/shop.html
+++ b/Python/templates/shop.html
@@ -74,6 +74,7 @@
         </div>
 
         <div class="row">
+          <form class="form-item" method = "POST" action = "">
           {% for item in data %}
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
@@ -90,6 +91,7 @@
               </div>
             </div>
           </div>
+          </form>
           {% endfor %}
         </div>
         <!-- /.row -->
