--- a/Python/templates/profile.html
+++ b/Python/templates/profile.html
@@ -20,8 +20,8 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item active" href="profile.html">Profile</a>
-                <a class="dropdown-item" href="#">Order History</a>
-                <a class="dropdown-item" href="#">Wish List</a>
+                <a class="dropdown-item " href="history.html">Order History</a>
+                <a class="dropdown-item" href="wishlist.html">Wish List</a>
               </div>
             </li>
           </ul>
@@ -33,7 +33,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">Thanos Purpleman</h1>
-      <img src="static/images/thanos.jpg" class="rounded-circle" alt="Cinque Terre" width="304" height="236">
+      <img src="static/images/thanos.jpg" class="rounded-circle" alt="Cinque Terre" width="296" height="236">
     </div>
   </section>
 
@@ -46,7 +46,7 @@
               <div class="card-body">
                 <h5 class="card-title">Order History</h5>
                 <p class="card-text">View past orders on this account.</p>
-                <a href="#" class="btn btn-primary">View Orders</a>
+                <a href="history.html" class="btn btn-primary">View Orders</a>
               </div>
             </div>
           </div>
@@ -56,7 +56,7 @@
               <div class="card-body">
                 <h5 class="card-title">Wish List</h5>
                 <p class="card-text">View saved items.</p>
-                <a href="#" class="btn btn-primary">View Wishlist</a>
+                <a href="wishlist.html" class="btn btn-primary">View Wishlist</a>
               </div>
             </div>
           </div>
