--- a/Python/templates/history.html
+++ b/Python/templates/history.html
@@ -28,52 +28,55 @@
       </div>
     </nav>
 
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Order History</h1>
+      </div>
+    </div>
 <div class="container">
-
     <div class="row">
 
-      <div class="col-lg-3">
-        <h1 class="my-4">Shop Name</h1>
-        <div class="list-group">
-          <a href="#" class="list-group-item active">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
+      <div class="dropdown-date">
+          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Last 6 Months
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="#">Last 6 Months</a>
+            <a class="dropdown-item" href="#">Last Year</a>
+            <a class="dropdown-item" href="#">Last 2 Years</a>
+          </div>
         </div>
-      </div>
       <!-- /.col-lg-3 -->
 
       <div class="col-lg-9">
-
+        <h2>Delivered on Insert Date here</h2>
         <div class="card mt-4">
           <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
           <div class="card-body">
             <h3 class="card-title">Product Name</h3>
             <h4>$24.99</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dicta fugit fugiat hic aliquam itaque facere, soluta. Totam id dolores, sint aperiam sequi pariatur praesentium animi perspiciatis molestias iure, ducimus!</p>
-            <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
-            4.0 stars
+            <p>
+                <button type="button" class="btn btn-primary">Buy it Again</button>
+                <button type="button" class="btn btn-secondary">Leave a Review</button>
+                <button type="button" class="btn btn-danger">Return Item</button>
+            </p>
           </div>
         </div>
         <!-- /.card -->
-
-        <div class="card card-outline-secondary my-4">
-          <div class="card-header">
-            Product Reviews
-          </div>
+          <h2>Delivered on Insert Date here</h2>
+          <div class="card mt-4">
+          <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
           <div class="card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-            <hr>
-            <a href="#" class="btn btn-success">Leave a Review</a>
+            <h3 class="card-title">Product Name</h3>
+            <h4>$24.99</h4>
+            <p>
+                <button type="button" class="btn btn-primary">Buy it Again</button>
+                <button type="button" class="btn btn-secondary">Leave a Review</button>
+                <button type="button" class="btn btn-danger">Return Item</button>
+            </p>
           </div>
         </div>
-        <!-- /.card -->
 
       </div>
       <!-- /.col-lg-9 -->
