--- a/Python/templates/index.html
+++ b/Python/templates/index.html
@@ -19,8 +19,8 @@
                         </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="profile.html">Profile</a>
-                        <a class="dropdown-item" href="#">Order History</a>
-                        <a class="dropdown-item" href="#">Wish List</a>
+                        <a class="dropdown-item" href="history.html">Order History</a>
+                        <a class="dropdown-item" href="wishlist.html">Wish List</a>
                     </div>
                     </li>
               {% else %}
