--- a/Python/templates/wishlist.html
+++ b/Python/templates/wishlist.html
@@ -20,60 +20,47 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="profile.html">Profile</a>
-                <a class="dropdown-item active" href="history.html">Order History</a>
-                <a class="dropdown-item" href="wishlist.html">Wish List</a>
+                <a class="dropdown-item" href="history.html">Order History</a>
+                <a class="dropdown-item active" href="wishlist.html">Wish List</a>
               </div>
             </li>
           </ul>
       </div>
     </nav>
 
-<div class="container">
-
-    <div class="row">
-
-      <div class="col-lg-3">
-        <h1 class="my-4">Shop Name</h1>
-        <div class="list-group">
-          <a href="#" class="list-group-item active">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
-        </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Wish List</h1>
       </div>
+    </div>
+<div class="container">
+    <div class="row">
       <!-- /.col-lg-3 -->
 
       <div class="col-lg-9">
-
         <div class="card mt-4">
           <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
           <div class="card-body">
             <h3 class="card-title">Product Name</h3>
             <h4>$24.99</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dicta fugit fugiat hic aliquam itaque facere, soluta. Totam id dolores, sint aperiam sequi pariatur praesentium animi perspiciatis molestias iure, ducimus!</p>
-            <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
-            4.0 stars
+            <p>
+                <button type="button" class="btn btn-primary">Buy Now</button>
+                <button type="button" class="btn btn-danger">Remove</button>
+            </p>
           </div>
         </div>
         <!-- /.card -->
-
-        <div class="card card-outline-secondary my-4">
-          <div class="card-header">
-            Product Reviews
-          </div>
+          <div class="card mt-4">
+          <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
           <div class="card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-            <hr>
-            <a href="#" class="btn btn-success">Leave a Review</a>
+            <h3 class="card-title">Product Name</h3>
+            <h4>$24.99</h4>
+            <p>
+                <button type="button" class="btn btn-primary">Buy Now</button>
+                <button type="button" class="btn btn-danger">Remove</button>
+            </p>
           </div>
         </div>
-        <!-- /.card -->
 
       </div>
       <!-- /.col-lg-9 -->
