Login Fixes & Basic Item Loading from Shop Page

--- a/Python/templates/item.html
+++ b/Python/templates/item.html
@@ -50,9 +50,15 @@
         <div class="card mt-4">
           <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
           <div class="card-body">
-            <h3 class="card-title">Product Name</h3>
-            <h4>$24.99</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dicta fugit fugiat hic aliquam itaque facere, soluta. Totam id dolores, sint aperiam sequi pariatur praesentium animi perspiciatis molestias iure, ducimus!</p>
+            {% if type %}
+              <h3 class="card-title">{{ type }}</h3>
+              <h4>${{ price }}</h4>
+              <p class="card-text">{{ desc }}</p>
+            {% else %}
+              <h3 class="card-title">Product Name</h3>
+              <h4>Price</h4>
+              <p class="card-text">Description</p>
+            {% endif %}
             <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
             4.0 stars
           </div>
