--- a/Python/templates/checkout.html
+++ b/Python/templates/checkout.html
@@ -1,5 +1,5 @@
-
 {% extends "layouts.html" %}
+{% from "macros.html" import nav_right with context %}
 {% block content %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -12,26 +12,9 @@
             <a class="nav-item nav-link" href="/shop.html">Shop</a>
             <a class="nav-item nav-link active" href="/checkout.html">Shopping Cart</a>
           </div>
-          <ul class="navbar-nav navbar-right">
-              {% if loggedin %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            {{ loggedin }}
-                        </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="profile.html">Profile</a>
-                        <a class="dropdown-item" href="history.html">Order History</a>
-                        <a class="dropdown-item" href="wishlist.html">Wish List</a>
-                    </div>
-                    </li>
-              {% else %}
-                    <li><a href="signup.html"> Sign Up</a></li>
-                    <li><a href="signin.html"> Login</a></li>
-              {% endif %}
-          </ul>
+          {{ nav_right('') }}
       </div>
     </nav>
-
     <div class="container">
       <div class="py-5 text-center">
         <img class="d-block mx-auto mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
