--- a/Python/templates/item.html
+++ b/Python/templates/item.html
@@ -54,10 +54,18 @@
               <h3 class="card-title">{{ type }}</h3>
               <h4>${{ price }}</h4>
               <p class="card-text">{{ desc }}</p>
+              <p>
+                  <button type="button" class="btn btn-primary">Add to Cart</button>
+                  <button type="button" class="btn btn-secondary">Add to Wish List</button>
+              </p>
             {% else %}
               <h3 class="card-title">Product Name</h3>
               <h4>Price</h4>
               <p class="card-text">Description</p>
+              <p>
+                  <button type="button" class="btn btn-primary">Add to Cart</button>
+                  <button type="button" class="btn btn-secondary">Add to Wish List</button>
+              </p>
             {% endif %}
             <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
             4.0 stars
@@ -79,7 +87,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
             <small class="text-muted">Posted by Anonymous on 3/1/17</small>
             <hr>
-            <a href="#" class="btn btn-success">Leave a Review</a>
+            <button type = "button" href="#reviewModal" class="btn btn-success" data-toggle="modal" data-target="#reviewModal">Leave a Review</button>
           </div>
         </div>
         <!-- /.card -->
@@ -90,6 +98,31 @@
     </div>
 
   </div>
+
+<!-- Modal -->
+<div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Leave a Review</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+            <div class="form-group">
+                <textarea class="form-control" id="reviewArea" rows="5"></textarea>
+              </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Leave Review</button>
+      </div>
+    </div>
+  </div>
+</div>
   <!-- /.container -->
 
   <!-- Footer -->
