--- a/Python/templates/layouts.html
+++ b/Python/templates/layouts.html
@@ -34,10 +34,23 @@
 
         <script>
             $(document).ready(function(){
-              var date_input=$('input[name="date"]'); //our date input has the name "date"
+              var date_input=$('input[name="birthday"]'); //our date input has the name "date"
               var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
               var options={
                 format: 'mm/dd/yyyy',
+                container: container,
+                todayHighlight: true,
+                autoclose: true,
+              };
+              date_input.datepicker(options);
+            })
+        </script>
+        <script>
+            $(document).ready(function(){
+              var date_input=$('input[name="expiration"]'); //our date input has the name "expiration"
+              var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
+              var options={
+                format: 'mm/yy',
                 container: container,
                 todayHighlight: true,
                 autoclose: true,
