--- a/Python/static/css/signin.css
+++ b/Python/static/css/signin.css
@@ -20,7 +20,8 @@ body {
   margin: auto;
 }
 .form-signin .checkbox {
-  font-weight: 400;
+    margin-top:10px;
+    font-weight: 400;
 }
 .form-signin .form-control {
   position: relative;
@@ -38,7 +39,10 @@ body {
   border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
-  margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+button {
+    margin-top:10px;
 }
