--- a/Python/templates/profile.html
+++ b/Python/templates/profile.html
@@ -69,7 +69,7 @@
               <div class="card-body">
                 <h5 class="card-title">Premium</h5>
                 <p class="card-text">View account status and benefits.</p>
-                <a href="#" class="btn btn-primary">View Benefits</a>
+                <a href="premium.html" class="btn btn-primary">View Benefits</a>
               </div>
             </div>
           </div>
@@ -79,7 +79,7 @@
               <div class="card-body">
                 <h5 class="card-title">Addresses</h5>
                 <p class="card-text">Change the addresses associated with your account.</p>
-                <a href="#" class="btn btn-primary">Edit Addresses</a>
+                <a href="address.html" class="btn btn-primary">Edit Addresses</a>
               </div>
             </div>
           </div>
@@ -89,7 +89,7 @@
               <div class="card-body">
                 <h5 class="card-title">Payment Methods</h5>
                 <p class="card-text">Add or remove methods of payment.</p>
-                <a href="#" class="btn btn-primary">Change Payment Info</a>
+                <a href="payment.html" class="btn btn-primary">Change Payment Info</a>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
               <div class="card-body">
                 <h5 class="card-title">Settings</h5>
                 <p class="card-text">Change your accounts settings.</p>
-                <a href="#" class="btn btn-primary">Edit Settings</a>
+                <a href="settings.html" class="btn btn-primary">Edit Settings</a>
               </div>
             </div>
         </div>
