--- a/Python/templates/signup.html
+++ b/Python/templates/signup.html
@@ -16,7 +16,7 @@
       <input type="verify" id="verifyPassword" class="form-control" placeholder="Verify Password" name = "verifyPassword" value = "{{ request.form.verifyPassword }}" required>
       <label for="inputPhone" class="sr-only">Phone Number</label>
       <input type="phone" id="inputPhone" class="form-control" placeholder="Phone Number" name = "phone" value = "{{ request.form.phone }}" required/>
-      <input type= "birthday" class="form-control" id="date" name="date" placeholder="Birthday" type="text" value = "{{ request.form.birthday }}" required/>
+      <input type= "birthday" class="form-control" id="birthday" name="birthday" placeholder="Birthday" type="text" value = "{{ request.form.birthday }}" required/>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
     </form>
