Images are now dynamically loaded into the html files

--- a/Python/templates/settings.html
+++ b/Python/templates/settings.html
@@ -70,7 +70,7 @@
 
 <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
     </div>
     <!-- /.container -->
   </footer>
