--- a/Python/templates/shop.html
+++ b/Python/templates/shop.html
@@ -65,10 +65,11 @@
           {% for item in data %}
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="/item.html"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="/item.html"><img class="card-img-top" src="static/images/items/{{ item[3] }}.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}">{{ item[0] }}</a>
+                  <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}">
+                    {{ item[0] }}</a>
                 </h4>
                 <h5>${{ item[1] }}</h5>
                 <p class="card-text">{{ item[2] }}</p>
@@ -94,7 +95,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
     </div>
     <!-- /.container -->
   </footer>
