--- a/Python/templates/checkout.html
+++ b/Python/templates/checkout.html
@@ -224,7 +224,7 @@
     </div>
 <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
     </div>
     <!-- /.container -->
   </footer>
