--- a/Python/templates/item.html
+++ b/Python/templates/item.html
@@ -33,7 +33,7 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="http://placehold.it/900x400" alt="">
+          <img class="card-img-top img-fluid" src="static/images/items/{{ id }}.png" alt="">
           <div class="card-body">
             {% if type %}
               <h3 class="card-title">{{ type }}</h3>
@@ -113,7 +113,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
     </div>
     <!-- /.container -->
   </footer>
