Images and Modals
-Updated modals for order history page
-Added custom images for profile.html

--- a/Python/templates/index.html
+++ b/Python/templates/index.html
@@ -44,9 +44,9 @@
       </div>
     </main>
 
-    <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang 2019</p>
+    <footer class="py-5">
+        <div class="container">
+        <p class="m-0 text-center text-black">Copyright &copy; Raymond Huang 2019</p>
     </div>
     <!-- /.container -->
   </footer>
