--- a/Python/templates/item.html
+++ b/Python/templates/item.html
@@ -112,7 +112,7 @@
       <div class="modal-body">
         <form>
             <div class="form-group">
-                <textarea class="form-control" id="reviewArea" rows="5"></textarea>
+                <textarea class="form-control" id="reviewArea" rows="5" placeholder="Review Here"></textarea>
               </div>
         </form>
       </div>
