--- a/Python/templates/profile.html
+++ b/Python/templates/profile.html
@@ -45,7 +45,7 @@
       <div class="row">
           <div class="col-md-4">
             <div class="card mb-4" style="width: 18rem;">
-              <img src="static/images/thanos.jpg" class="card-img-top" alt="...">
+              <img src="static/images/history.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Order History</h5>
                 <p class="card-text">View past orders on this account.</p>
@@ -55,7 +55,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4" style="width: 18rem;">
-              <img src="static/images/thanos.jpg" class="card-img-top" alt="...">
+              <img src="static/images/wishlist.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Wish List</h5>
                 <p class="card-text">View saved items.</p>
@@ -65,7 +65,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4" style="width: 18rem;">
-              <img src="static/images/thanos.jpg" class="card-img-top" alt="...">
+              <img src="static/images/premium.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Premium</h5>
                 <p class="card-text">View account status and benefits.</p>
@@ -75,7 +75,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4" style="width: 18rem;">
-              <img src="static/images/thanos.jpg" class="card-img-top" alt="...">
+              <img src="static/images/address.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Addresses</h5>
                 <p class="card-text">Change the addresses associated with your account.</p>
@@ -85,7 +85,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4" style="width: 18rem;">
-              <img src="static/images/thanos.jpg" class="card-img-top" alt="...">
+              <img src="static/images/payment.ico" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Payment Methods</h5>
                 <p class="card-text">Add or remove methods of payment.</p>
@@ -95,7 +95,7 @@
           </div>
           <div class="col-md-4">
             <div class="card mb-4" style="width: 18rem;">
-              <img src="static/images/thanos.jpg" class="card-img-top" alt="...">
+              <img src="static/images/settings.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Settings</h5>
                 <p class="card-text">Change your accounts settings.</p>
