--- a/Python/templates/item.html
+++ b/Python/templates/item.html
@@ -42,6 +42,8 @@
               <p>
                   <button type="button" class="btn btn-primary">Add to Cart</button>
                   <button type="button" class="btn btn-secondary">Add to Wish List</button>
+                  <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#editModal">Edit Item</button>
+                  <button type="button" class="btn btn-danger">Delete Item</button>
               </p>
             {% else %}
               <h3 class="card-title">Product Name</h3>
@@ -64,13 +66,13 @@
           </div>
           <div class="card-body">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <small class="text-muted">Posted by Anonymous on 3/1/17</small> <button type="button" class="btn btn-danger btn-sm float-right">Delete Review</button>
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <small class="text-muted">Posted by Anonymous on 3/1/17</small> <button type="button" class="btn btn-danger btn-sm float-right">Delete Review</button>
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+            <small class="text-muted">Posted by Anonymous on 3/1/17</small> <button type="button" class="btn btn-danger btn-sm float-right">Delete Review</button>
             <hr>
             <button type = "button" href="#reviewModal" class="btn btn-success" data-toggle="modal" data-target="#reviewModal">Leave a Review</button>
           </div>
@@ -84,7 +86,7 @@
 
   </div>
 
-<!-- Modal -->
+<!-- Review Modal -->
 <div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -104,6 +106,65 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Leave Review</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Edit Item Modal -->
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editModalTitle">Edit Item</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label for="inputName">Name</label>
+              <input type="name" class="form-control" id="inputName" placeholder="Name">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="inputPrice">Price</label>
+              <input type="price" class="form-control" id="inputPrice" placeholder="Price">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="inputSeller">Seller Name</label>
+            <input type="seller" class="form-control" id="inputSeller" placeholder="Seller Name">
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputCategory">Category</label>
+              <input type="text" class="form-control" id="inputCategory">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="inputCategory">Image</label>
+              <div class="custom-file">
+                <label class="custom-file-label" for="customFile">Image</label>
+                <input type="file" class="custom-file-input" id="customFile" placeholder="Image">
+              </div>
+            </div>
+            <div class="form-group col-md-2">
+              <label for="inputQuantity">Quantity</label>
+              <input type="text" class="form-control" id="inputQuantity">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-group">
+              <label for="inputReview">Description</label>
+              <textarea class="form-control" id="inputReview" rows="5" placeholder=""></textarea>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Edit Item</button>
       </div>
     </div>
   </div>
