--- a/Python/templates/macros.html
+++ b/Python/templates/macros.html
@@ -22,7 +22,7 @@
                             <a class="dropdown-item active" href="wishlist.html">Wish List</a>
                             <a class="dropdown-item" href="/?logoff=true">Log Off</a>
                         {% else %}
-                            <a class="dropdown-item" href="profile.html">Profile</a>
+                            <a class="dropdown-item" href="profile.html"><span class="fa fa-user"></span> Profile</a>
                             <a class="dropdown-item" href="history.html">Order History</a>
                             <a class="dropdown-item" href="wishlist.html">Wish List</a>
                             <a class="dropdown-item" href="/?logoff=true">Log Off</a>
@@ -30,8 +30,8 @@
                     </div>
                     </li>
               {% else %}
-                    <li><a href="signup.html"> Sign Up</a></li>
-                    <li><a href="signin.html"> Login</a></li>
+                    <li><a class="nav-item nav-link" href="signup.html"> <span class="fa fa-user-plus"></span> Sign Up</a></li>
+                    <li><a class="nav-item nav-link" href="signin.html"> <span class="fa fa-sign-in"></span> Login</a></li>
               {% endif %}
           </ul>
 {% endmacro %}
