--- a/Python/templates/address.html
+++ b/Python/templates/address.html
@@ -1,35 +1,7 @@
 {% extends "layouts.html" %}
+{% from "macros.html" import nav with context %}
 {% block content %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-      <a class="navbar-brand" href="/">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-          <div class="navbar-nav navbar">
-            <a class="nav-item nav-link" href="/">Home</a>
-            <a class="nav-item nav-link" href="/shop.html">Shop</a>
-            <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
-          </div>
-          <ul class="navbar-nav navbar-right">
-              {% if loggedin %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            {{ loggedin }}
-                        </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="profile.html">Profile</a>
-                        <a class="dropdown-item active" href="history.html">Order History</a>
-                        <a class="dropdown-item" href="wishlist.html">Wish List</a>
-                    </div>
-                    </li>
-              {% else %}
-                    <li><a href="signup.html"> Sign Up</a></li>
-                    <li><a href="signin.html"> Login</a></li>
-              {% endif %}
-          </ul>
-      </div>
-    </nav>
+{{ nav('home') }}
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
